--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "framer-motion": "^11.11.0",
-    "next": "^14.2.0",
+    "next": "15.1.9",
     "next-auth": "^4.24.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
